[package]
name = "cryo"
version = "0.1.0"
edition = "2024"
description = "A file-backed row database engine built on B-Trees"

[package.metadata]
about = "A B-Tree storage engine."

[dependencies]
bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.37", features = ["derive"] }
ctrlc = "3.4.6"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"

[dev-dependencies]
tempdir = "0.3.7"
