[package]
name = "cryo"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.13.0"
clap = { version = "4.6.1", features = ["derive"] }
crc = "3.4.0"
env_logger = "0.11.11"
log = "0.4.33"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
